change the jar name